[package]
name = "bento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
base64-url = "2.0.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "serde_json",
] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
