[package]
name = "bento"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
base64 = "0.21.4"
base64-url = "2.0.0"
bigdecimal = { version = "0.4.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
eventsource-client = "0.11.0"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
clap = { version = "4.4.4", features = ["derive"] }
[dev-dependencies]
serial_test = "2.0.0"
