[package]
name = "bento"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
base64 = "0.22.1"
base64-url = "3.0.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.1.6", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
    "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
eventsource-client = "0.15.0"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
actix-web = "4"
rand = "0.9.2"
clap = { version = "4.4.18", features = ["derive"] }
[dev-dependencies]
serial_test = "3.2.0"
